shop page, instagram on front page added

--- a/match.html
+++ b/match.html
@@ -138,7 +138,9 @@
                         </div>
                     </div>
                 <div class="youtube">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/mCCw3i3kI4A?si=mXqDvqglqzNDxq1U&amp;start=844" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>                </div>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/mCCw3i3kI4A?si=mXqDvqglqzNDxq1U&amp;start=844" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>                
+                </div>
+                
             </div>
         </div>
     <!--Footer Section-->
