--- a/shop.html
+++ b/shop.html
@@ -44,5 +44,59 @@
             </div>
         </div>
     </nav>
+    <section class="shop">
+        <div class="shape">
+            <div class=shop-header>
+                <h1>GURFC Shop</h1>
+
+            </div>
+        </div>
+        <div class="shop-main">
+            <div class="shop-body1">
+                <a href="https://www.liquidrugby.com/georgetown-university-rfc">
+                    <div class="shop-card">
+                        <img src="images/akuma.webp" class="shop-image">
+                        <h1>Liquid Rugby</h1>
+                        <p>Gear for the team</p>
+                    </div>
+                </a>
+                <a href="https://www.worldrugbyshop.com/collections/georgetown-university-rugby-football-club">
+                    <div class="shop-card">
+                        <img src="images/wrs.webp" class="shop-image">
+                        <h1>World Rugby Shop</h1>
+                        <p>(Gear for everybody)</p>
+                    </div>
+                </a>
+                <div class="shop-card">
+                    <img src="images/merch.webp" class="shop-image">
+                    <h1>Our Merch</h1>
+                    <p>(Coming Soon)<p>
+                </div>
+            </div>
+            <div class="shop-donate">
+
+            </div>
+        </div>
+    </section>
+    <section>
+        <div class="footer__container">
+            <div class="footer__logo">
+                    <a href="/" id="footer__logo">
+                            <img src="images/logo.png"
+                            width="100"
+                            height="100">
+                    </a>
+                    <p>©2024 All rights reserved</p>
+            </div>
+            <div class="social__icons">
+                <a href="/" class="social__icon--link" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                <a href="/" class="social__icon--link" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+                <a href="/" class="social__icon--link" target="_blank"><i class="fa-brands fa-youtube"></i></a>
+        
+            </div>
+
+        </div>
+    </section>
+    <script src="app.js"></script>
 </body>
 </html>
