logo link fixed

--- a/roster.html
+++ b/roster.html
@@ -15,7 +15,7 @@
         <nav class="navbar">
             <div class="navbar__container">
                 <div class="navbar__wide">
-                    <a href="/" id="navbar__logo">
+                    <a href="index.html" id="navbar__logo">
                         <img src="images/logo.png" width="80" height="80">
                     </a>
                     <ul class="navbar__menu">
