--- a/watch.html
+++ b/watch.html
@@ -46,13 +46,16 @@
     </nav>
     <!-- About Section -->
         <div class="about__header">
-            <h1>About Us</h1>
+            <h1>Join GURFC</h1>
         </div>
         <div class="about__main">
             <div class="about__container">
                     <div class="about__content">
-                        <h2>Our History</h2>
-                        <p>Founded in 1967, Georgetown University Rugby Football Club is a club sport team that has competed at the highest levels of collegiate rugby since its inception. The team competes in the Mid-Atlantic Rugby Conference in Division II of National Collegiate Rugby. Our team carries the values of our institution onto the rugby field, and vice versa. The team culture that has been passed on from class to class continues because of the active involvement of our alumni network. They play an active role supporting the next generation of Hoyas in their rugby and professional careers.</p>
+                        <h2>Dear Prospective Players,</h2>
+                        <p>Georgetown Rugby welcomes you to  practice with us on Cooper Field each Tuesday and Thursday from 7pm to 9pm during the academic year. No prior experience is required to join the team, although we strongly encourage you to bring a pair of cleats to practice. Many GURFC legends started their rugby careers with our team, and we invite you, the next generation of GURFC, to join us in our hunt for the national title. </p>
+                        <a href="">
+                            <h2 style="font-size:1.5rem; text-decoration: underline; color: #041e42">Are you ready?</h2>
+                        </a>
                         <img src="images/PD.jpeg" id="abtimg">
                         <img src="images/uncs.png" id="abtimg2">
                     </div>
