--- a/roster.html
+++ b/roster.html
@@ -60,15 +60,20 @@
                         </div>
                         <div class="profile-body">
                             <table class="details">
-                                <tr>
-                                    <td class="position">Position: <b>Lock</b></td>
-                                    <td class="year">School/Year: <b>CAS Jr.</b></td>
-                                    <td class="hometown">Hometown: <b>Brookline, MA</b></td>
-                                </tr>
-                                <tr>
-                                    <td class="height/weight">Ht/Wt: <b>6ft/180lbs</b></td>
-                                    <td class="birthday">Birthday: <b>08/13/2003</b></td>
-                                </tr>
+                                <thead>
+                                    <tr>
+                                        <td class="position">Position:</td>
+                                        <td class="year">Year:</td>
+                                        <td class="hometown">Hometown:</td>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td class="player_position"><b>Lock</b></td>
+                                        <td class="player_year">Jr.</td>
+                                        <td class="player_hometown">Brookline, MA</td>
+                                    </tr>
+                                </tbody>
                             </table>
                         </div>
                     </div>
