--- a/shop.html
+++ b/shop.html
@@ -53,25 +53,27 @@
         </div>
         <div class="shop-main">
             <div class="shop-body1">
-                <a href="https://www.liquidrugby.com/georgetown-university-rfc">
+                <a href="https://www.liquidrugby.com/georgetown-university-rfc" style="text-decoration: none; color: #041e42">
                     <div class="shop-card">
                         <img src="images/akuma.webp" class="shop-image">
                         <h1>Liquid Rugby</h1>
                         <p>Gear for the team</p>
                     </div>
                 </a>
-                <a href="https://www.worldrugbyshop.com/collections/georgetown-university-rugby-football-club">
+                <a href="https://www.worldrugbyshop.com/collections/georgetown-university-rugby-football-club" style="text-decoration: none; color: #041e42">
                     <div class="shop-card">
                         <img src="images/wrs.webp" class="shop-image">
                         <h1>World Rugby Shop</h1>
-                        <p>(Gear for everybody)</p>
+                        <p>Gear for everybody</p>
                     </div>
                 </a>
-                <div class="shop-card">
-                    <img src="images/merch.webp" class="shop-image">
-                    <h1>Our Merch</h1>
-                    <p>(Coming Soon)<p>
-                </div>
+                <a href="" style="text-decoration: none; color: #041e42">
+                    <div class="shop-card">
+                        <img src="images/merch.webp" class="shop-image">
+                        <h1>Our Merch</h1>
+                        <p>Coming Soon<p>
+                    </div>
+                </a>
             </div>
             <div class="shop-donate">
 
