Shop images, scaling

--- a/shop.html
+++ b/shop.html
@@ -54,24 +54,53 @@
         <div class="shop-main">
             <div class="shop-body1">
                 <a href="https://www.liquidrugby.com/georgetown-university-rfc" style="text-decoration: none; color: #041e42">
-                    <div class="shop-card">
-                        <img src="images/akuma.webp" class="shop-image">
+                    <div class="shop-card1">
                         <h1>Liquid Rugby</h1>
                         <p>Gear for the team</p>
+                        <img src="images/akuma.webp" class="shop-image">
                     </div>
                 </a>
                 <a href="https://www.worldrugbyshop.com/collections/georgetown-university-rugby-football-club" style="text-decoration: none; color: #041e42">
-                    <div class="shop-card">
-                        <img src="images/wrs.webp" class="shop-image">
+                    <div class="shop-card1">
                         <h1>World Rugby Shop</h1>
                         <p>Gear for everybody</p>
+                        <img src="images/wrs.webp" class="shop-image">
                     </div>
                 </a>
                 <a href="" style="text-decoration: none; color: #041e42">
-                    <div class="shop-card">
-                        <img src="images/merch.webp" class="shop-image">
+                    <div class="shop-card1">
                         <h1>Our Merch</h1>
                         <p>Coming Soon<p>
+                        <img src="images/merch.webp" class="shop-image">
+                    </div>
+                </a>
+            </div>
+            <br>
+            <h1 style="text-align: center; color:#041e42; font-size: 3rem;">Our Picks</h1>
+            <br>
+            <div class="shop-body2">
+                <a href="https://www.worldrugbyshop.com/products/georgetown-university-rfc-classic-long-sleeve-hooped-rugby-jersey?variant=41751236935777" style="text-decoration: none; color: #041e42">
+                    <div class="shop-card2">
+                        <img src="images/shop1.webp" class="shop-image2">
+                        <h1>Long Sleeve Hooped Rugby Jersey</h1>
+                    </div>
+                </a>
+                <a href="https://www.worldrugbyshop.com/collections/georgetown-university-rugby-football-club/products/georgetown-university-rfc-club-dry-polo-by-canterbury" style="text-decoration: none; color: #041e42">
+                    <div class="shop-card2">
+                        <img src="images/shop2.jpg" class="shop-image2">
+                        <h1>Canterbury Dry Polo</h1>
+                    </div>
+                </a>
+                <a href="https://www.worldrugbyshop.com/collections/georgetown-university-rugby-football-club/products/georgetown-university-rfc-free-form-rugby-backpack" style="text-decoration: none; color: #041e42">
+                    <div class="shop-card2">
+                        <img src="images/shop3.webp" class="shop-image2">
+                        <h1>GURFC Free Form Rugby Backpack</h1>
+                    </div>
+                </a>
+                <a href="https://www.worldrugbyshop.com/collections/georgetown-university-rugby-football-club/products/georgetown-university-rfc-club-hoodie-by-canterbury?variant=41751223074913" style="text-decoration: none; color: #041e42">
+                    <div class="shop-card2">
+                        <img src="images/shop4.webp" class="shop-image2">
+                        <h1>Canterbury Club Hoodie</h1>
                     </div>
                 </a>
             </div>
