--- a/index.html
+++ b/index.html
@@ -65,7 +65,9 @@
     <div class="main2">
         <div class="main2__container">
             <div class="main2__content">
-                <h1>Who are we?</h1>
+                <a href="us.html">
+                    <h1>Who are we?</h1>
+                </a>
                 <br>
                 <p>Founded in 1967, Georgetown University Rugby Football Club has consistently competed at the highest levels of collegiate rugby. The team competes in the Mid-Atlantic Rugby Conference in Division II of National Collegiate Rugby. GURFC's winning culture is stronger than ever thanks to our coaches and active alumni network.</p>
                 <br>
