--- a/watch.html
+++ b/watch.html
@@ -52,66 +52,28 @@
             <div class="about__container">
                     <div class="about__content">
                         <h2>Dear Prospective Players,</h2>
-                        <p>Georgetown Rugby welcomes you to  practice with us on Cooper Field each Tuesday and Thursday from 7pm to 9pm during the academic year. No prior experience is required to join the team, although we strongly encourage you to bring a pair of cleats to practice. Many GURFC legends started their rugby careers with our team, and we invite you, the next generation of GURFC, to join us in our hunt for the national title. </p>
-                        <a href="">
-                            <h2 style="font-size:1.5rem; text-decoration: underline; color: #041e42">Are you ready?</h2>
-                        </a>
-                        <img src="images/PD.jpeg" id="abtimg">
-                        <img src="images/uncs.png" id="abtimg2">
+                        <p>Georgetown Rugby welcomes you to  practice with us on Cooper Field each Tuesday and Thursday from 7pm to 9pm during the academic year. Absolutely no prior experience is required to join the team. Many GURFC legends have started their rugby careers with our team, and now we invite you to join us in the hunt for the national title. </p>
                     </div>
-                    <hr>
             </div>
-            <div class="Slideshow">
-                <div class="about__content2">
-                    <div class="Slides fade">
-                         <div class="SlideTitle">
-                                <h2>Our Commitment to Inclusivity</h2>
-                        </div>
-                        <img src="images/include.jpg"  class="ssimg">
-                        <div class="caption">
-                                <p>Inclusivity is at the heart of everything we do. Rugby is for everyone, regardless of experience or background. Our club is a welcoming space where individuals from diverse walks of life come together, united by their love for the game.
-                                        We embrace and celebrate the richness of different perspectives and identities in our community. Whether you're a seasoned player or stepping onto the field for the first time, GURFC is your home.</p>
-                        </div>
-                    </div>
-                    <div class="Slides fade">
-                        <div class="SlideTitle">
-                                    <h2>Developing Athletes, Building Leaders</h2>
-                        </div>
-                        <img src="images/athlete.jpeg"  class="ssimg">
-                        <div class="caption">
-                                        <p>GURFC is more than a sports team; it's a platform for personal growth and leadership development.
-                                        Through our rigorous training sessions, our coaching staff not only hones players' rugby skills but also instills values like discipline, resilience, and teamwork. We encourage our members to take on leadership roles on and off the field, fostering a culture of accountability and empowerment. The lessons learned on the pitch translate into life skills that extend far beyond the game.</p>
-                        </div>
-                    </div>
-                    <div class="Slides fade">
-                        <div class="SlideTitle">
-                                    <h2>Beyond Rugby: A Community of Support</h2>
-                        </div>
-                        <img src="images/fwd.jpg"  class="ssimg">
-                        <div class="caption">
-                                        <p>Joining GURFC means gaining a support network that extends beyond the game itself. Our members are dedicated to supporting one another academically, physically, and personally.
-                                        From study groups and fitness sessions to being there for each other through life's challenges, GURFC fosters an environment where teammates become lifelong friends. Our community is one where bonds forged on the field translate into lasting relationships and a sense of belonging that lasts well beyond college.</p>
-                        </div>
-                    </div>
-                    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-                    <a class="next" onclick="plusSlides(1)">&#10095;</a>
-                </div>
-                <br>
-                <div style="text-align: center">
-                            <span class="dot" onclick="currentSlide(1)"></span>
-                            <span class="dot" onclick="currentSlide(2)"></span>
-                            <span class="dot" onclick="currentSlide(3)"></span>
-                </div>
-            </div>
-                <hr>
-            <div class="about__content3">
-                    <h2>Embracing Tradition</h2>
-                    <iframe width="500" height="315" src="https://www.youtube.com/embed/M8ItVtysA5o?si=OM4Yzymn_uKCERls" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                    <p>As a part of GURFC, you're not just joining a team but becoming part of a rich tradition. We take pride in our history, honoring the legacy of those who have worn our jersey before us. From game-day rituals to alumni events, we cherish the traditions that define our club. 
+            <button class="join__btn"><b>Are You Ready?</b></button>
+            <hr>
+            <div id="joinimg" style="margin-top: 12px;"></div>
+        </div>
+        <div class="join-blog">
+            <div class="join-articles">
+                <div class="article-card">
 
-                            Moreover, we're committed to creating new memories and experiences for our members, ensuring that every season brings moments that will be cherished for a lifetime.</p>
-       
-                </div>  
+                </div>
+                <div class="article-card">
+
+                </div>
+                <div class="article-card">
+
+                </div>
+                <div class="article-card">
+
+                </div>
+            </div>
         </div>  
     <!--Footer Section-->
     <div class="footer__container">
