--- a/match.html
+++ b/match.html
@@ -32,7 +32,7 @@
                         <a href="match.html" class="navbar__links">Watch</a>    
                     </li>
                     <li class="navbar__btn">
-                        <a href="join.html" class="button">Join GURFC</a>
+                        <a href="watch.html" class="button">Join GURFC</a>
                     </li>
                 </ul>
             </div>
@@ -45,27 +45,33 @@
         </div>
     </nav>
     <!-- Watch Section -->
-        <div class="watch__container">
-            <div class="shape">
-                <div class="watch__header">
-                    <h1>Watch GURFC</h1>
-                    <h2>Next Match:</h2>
-                    <div class="score-table">
-                        <div></div>
-                        <div class="GURFC-card">
-                            <img src="images/GURFClogo.jpg" id="watch-logo">
+        <section class="watch__body">
+            <div class="watch__header"> <!--contains next match card-->
+                <div class="watch__container">
+                    <div class="shape">
+                        <div class="shop-header"> <!--borrow css from shop page-->
+                            <h1>Watch GURFC</h1>
                         </div>
-                        <h2>vs.</h2>
-                        <div class="opponent-card">
-                        </div>
-                        <div></div>
                     </div>
+                    <h2 style="color:#041e42; text-align: center; padding-top: 24px; font-size: 2.5rem; line-height: 0;">Next Match:</h2>
+                        <div class="next-match">
+                            <div class="score-table">
+                                <div></div>
+                                <div class="GURFC-card">
+                                    <img src="images/logo.png" id="watch-logo">
+                                </div>
+                                <h2>vs.</h2>
+                                <div class="opponent-card">
+                                </div>
+                                <div></div>
+                            </div>
+                        </div>
                 </div>
             </div>
             <div class="watch__container2">
                 <div class="watch__main">
                         <div class="watch__video">
-                            <h1>Results</h1>
+                            <h1 style="text-align: center; padding: 8px 12px;">Results</h1>
                             <table class="score-box">
                                 <thead>
                                 <tr>
@@ -137,12 +143,14 @@
                             </table>
                         </div>
                     </div>
-                <div class="youtube">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/mCCw3i3kI4A?si=mXqDvqglqzNDxq1U&amp;start=844" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>                
                 </div>
-                
+            </div> 
+            <div class="videos">
+                <div class="youtube">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/mCCw3i3kI4A?si=mXqDvqglqzNDxq1U&amp;start=844" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                </div>
             </div>
-        </div>
+        </section>
     <!--Footer Section-->
     <div class="footer__container">
         <div class="footer__logo">
