minor spacing issues fixed

--- a/match.html
+++ b/match.html
@@ -50,98 +50,97 @@
                 <div class="watch__container">
                     <div class="shape">
                         <div class="shop-header"> <!--borrow css from shop page-->
-                            <h1>Watch GURFC</h1>
+                            <h1>Watch</h1>
+                            <h2>GURFC</h1>
                         </div>
                     </div>
                     <h2 style="color:#041e42; text-align: center; padding-top: 24px; font-size: 2.5rem; line-height: 0;">Next Match:</h2>
                         <div class="next-match">
                             <div class="score-table">
-                                <div></div>
                                 <div class="GURFC-card">
                                     <img src="images/logo.png" id="watch-logo">
                                 </div>
                                 <h2>vs.</h2>
                                 <div class="opponent-card">
                                 </div>
-                                <div></div>
                             </div>
                         </div>
                 </div>
             </div>
             <div class="watch__container2">
+                <h1>Results</h1>
+
                 <div class="watch__main">
-                        <div class="watch__video">
-                            <h1 style="text-align: center; padding: 8px 12px;">Results</h1>
-                            <table class="score-box">
-                                <thead>
-                                <tr>
-                                    <th>Opponent</th>
-                                    <th>Result</th>
-                                    <th>Location</th>
-                                    <th>Date</th>
-                                    <th>Watch</th>
-                                </tr>
-                                </thead>
-                                <tbody>
-                                <tr>
-                                    <td>Villanova</td>
-                                    <td>W 48-37</td>
-                                    <td>Alapocas Run State Park</td>
-                                    <td>11/4/2023</td>
-                                    <td>Georgetown vs. Villanova</td>
-                                </tr>
-                                <tr class="active-row">
-                                    <td>Scranton</td>
-                                    <td>W 50-22</td>
-                                    <td>North Bay Rugby Club</td>
-                                    <td>10/28/2023</td>
-                                    <td>Georgetown vs. Scranton</td>
-                                </tr>
-                                <tr>
-                                    <td>Shippensburg</td>
-                                    <td>W 28-0</td>
-                                    <td>@ Shippensburg</td>
-                                    <td>10/21/2023</td>
-                                    <td>Shippensburg vs. Georgetown</td>
-                                </tr>
-                                <tr>
-                                    <td>Drexel</td>
-                                    <td>W 28-0</td>
-                                    <td>Cooper Field</td>
-                                    <td>10/14/2023</td>
-                                    <td>Unavailable</td>
-                                </tr>
-                                <tr>
-                                    <td>Towson</td>
-                                    <td>W 47-0</td>
-                                    <td>@ Towson</td>
-                                    <td>10/7/2023</td>
-                                    <td>Unavailable</td>
-                                </tr>
-                                <tr>
-                                    <td>Mount C</td>
-                                    <td>W 78-10</td>
-                                    <td>@ Mount</td>
-                                    <td>9/23/2023</td>
-                                    <td>Unavailable</td>
-                                </tr>
-                                <tr>
-                                    <td>UMBC</td>
-                                    <td>W 78-10</td>
-                                    <td>Cooper Field</td>
-                                    <td>9/16/2023</td>
-                                    <td>Unavailable</td>
-                                </tr>
-                                <tr>
-                                    <td>York</td>
-                                    <td>W 28-0</td>
-                                    <td>@ York</td>
-                                    <td>9/9/2023</td>
-                                    <td>Unavailable</td>
-                                </tr>
-                                </tbody>
-                            </table>
-                        </div>
+                        <div class="watch__video">                        </div>
+                        <table class="score-box">
+                            <thead>
+                            <tr>
+                                <th>Opponent</th>
+                                <th>Result</th>
+                                <th>Location</th>
+                                <th>Date</th>
+                                <th>Watch</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr>
+                                <td>Villanova</td>
+                                <td>W 48-37</td>
+                                <td>Alapocas Run State Park</td>
+                                <td>11/4/2023</td>
+                                <td>Georgetown vs. Villanova</td>
+                            </tr>
+                            <tr class="active-row">
+                                <td>Scranton</td>
+                                <td>W 50-22</td>
+                                <td>North Bay Rugby Club</td>
+                                <td>10/28/2023</td>
+                                <td>Georgetown vs. Scranton</td>
+                            </tr>
+                            <tr>
+                                <td>Shippensburg</td>
+                                <td>W 28-0</td>
+                                <td>@ Shippensburg</td>
+                                <td>10/21/2023</td>
+                                <td>Shippensburg vs. Georgetown</td>
+                            </tr>
+                            <tr>
+                                <td>Drexel</td>
+                                <td>W 28-0</td>
+                                <td>Cooper Field</td>
+                                <td>10/14/2023</td>
+                                <td>Unavailable</td>
+                            </tr>
+                            <tr>
+                                <td>Towson</td>
+                                <td>W 47-0</td>
+                                <td>@ Towson</td>
+                                <td>10/7/2023</td>
+                                <td>Unavailable</td>
+                            </tr>
+                            <tr>
+                                <td>Mount C</td>
+                                <td>W 78-10</td>
+                                <td>@ Mount</td>
+                                <td>9/23/2023</td>
+                                <td>Unavailable</td>
+                            </tr>
+                            <tr>
+                                <td>UMBC</td>
+                                <td>W 78-10</td>
+                                <td>Cooper Field</td>
+                                <td>9/16/2023</td>
+                                <td>Unavailable</td>
+                            </tr>
+                            <tr>
+                                <td>York</td>
+                                <td>W 28-0</td>
+                                <td>@ York</td>
+                                <td>9/9/2023</td>
+                                <td>Unavailable</td>
+                            </tr>
+                            </tbody>
+                        </table>
                     </div>
                 </div>
             </div> 
