--- a/shop.html
+++ b/shop.html
@@ -47,7 +47,8 @@
     <section class="shop">
         <div class="shape">
             <div class=shop-header>
-                <h1>GURFC Shop</h1>
+                <h1>GURFC</h1>
+                <h2>Shop</h2>
 
             </div>
         </div>
