--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     <!--Footer Section-->
     <div class="footer__container">
         <div class="footer__logo">
-                <a href="/" id="footer__logo">
+                <a href="index.html" id="footer__img">
                         <img src="images/logo.png"
                         width="100"
                         height="100">
@@ -93,7 +93,7 @@
                  <p>©2024 All rights reserved</p>
         </div>
         <div class="social__icons">
-            <a href="/" class="social__icon--link" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+            <a href="/" class="social__icon--link" target="https://www.instagram.com/gurfc/"><i class="fa-brands fa-instagram"></i></a>
             <a href="/" class="social__icon--link" target="_blank"><i class="fa-brands fa-facebook"></i></a>
             <a href="/" class="social__icon--link" target="_blank"><i class="fa-brands fa-youtube"></i></a>
     
