watch.html header html

--- a/watch.html
+++ b/watch.html
@@ -45,9 +45,11 @@
         </div>
     </nav>
     <!-- About Section -->
-        <div class="shop-header">
-            <h1>Join</h1>
-            <h2>GURFC</h2>
+        <div class="shape">
+            <div class="shop-header">
+                <h1>Join</h1>
+                <h2>GURFC</h2>
+            </div>
         </div>
         <div class="about__main">
             <div class="about__container">
